# SK

./: .gitattributes  .gitignore  README.md  Readme.md
extensions/vscode/: LICENSE.md  README.md  language-configuration.json  package.json
interpreter/: Cargo.toml  README.md  test.sk
interpreter/examples/: arrays.sk  conditionals.sk  filesystem.sk  for_loops.sk  functions.sk  http.sk  libraries.sk  logic.sk  misc.sk  scopes.sk  simplelib.sk  strings.sk  symbolics.sk  test.sk  units.sk
interpreter/examples/assets/: myfile.txt
interpreter/examples/features/: conditionals.sk  functions.sk  logic.sk  match.sk  trycatch.sk
interpreter/examples/libraries/: http.sk  libraries.sk  simplelib.sk  strings.sk
interpreter/examples/loops/: loops.sk
interpreter/examples/programs/: clock.sk  guess.sk
interpreter/examples/variables/: intervals.sk  symbolics.sk
interpreter/src/: lib.rs  main.rs  repl.rs
interpreter/src/core/: error.rs  logic.rs  mod.rs  units.rs  value.rs
interpreter/src/evaluator/: builtins.rs  env.rs  eval.rs  mod.rs
interpreter/src/libs/: fs.rs  http.rs  json.rs  math.rs  mod.rs  os.rs  rand.rs  string.rs  time.rs  units.rs
interpreter/src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
interpreter/tests/: tests.rs
python-prototype/: main.py  sk.py
python-prototype/examples/: test-add.py  test-booleans.py  test-conditionals.py  test-constsymbolics.py  test-division.py  test-exponentiation.py  test-functions.py  test-knowledge.py  test-misc.py  test-mult.py  (+2 more)
website/: index.html  package-lock.json  package.json  vite.config.js
(+57 files in other folders)
