[package]
name = "sk-lang"
description = "The SK Programming Language interpreter"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/AlmartDev/SK"
homepage = "https://sk-lang.vercel.app"
license = "MIT"
keywords = ["programming-language"]

[[bin]]
name = "SK"
path = "src/main.rs"

[dependencies]
chrono = "0.4.43"
env_logger = "0.11.8"
log = "0.4.29"
rustyline = "17.0.2"
