[package]
name = "sk-lang"
description = "The SK Programming Language interpreter"
version = "0.9.6"
edition = "2024"
repository = "https://github.com/aloyak/SK"
homepage = "https://sk.aloyak.dev"
license = "MIT"
keywords = ["programming-language"]

[[bin]]
name = "SK"
path = "src/main.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
chrono = "0.4.43"
rand = "0.9.2"
reqwest = "0.13.2"
rustyline = "17.0.2"
